testsuite/tests/typecheck/should_fail/T23739b.stderr
T23739b.hs:8:4: error: [GHC-01928]
    • Illegal term-level use of the type constructor ‘Int’
    • imported from ‘Prelude’ at T23739b.hs:2:8-14
      (and originally defined in ‘GHC.Types’)
    • In the pattern: Int
      In an equation for ‘g1’: g1 Int = ()

T23739b.hs:11:6: error: [GHC-01928]
    • Illegal term-level use of the type constructor ‘Int’
    • imported from ‘Prelude’ at T23739b.hs:2:8-14
      (and originally defined in ‘GHC.Types’)
    • In the expression: Int
      In an equation for ‘g2’: g2 = Int

